# projectbrain-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/pb/: client.py  config.py  main.py  reporters.py
src/pb/commands/: auth.py  backfill_embeddings.py  completion.py  curate.py  knowledge.py  projects.py  run.py  tasks.py
src/pb/services/: __init__.py
