[project]
name = "project-brain"
version = "0.1.1"
description = "CLI for ProjectBrain — AI-native project management"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Li-Hsuan Lung", email = "li-hsuan.lung@9trinkets.com" },
]
readme = "README.md"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "typer[all]>=0.12",
]

[project.urls]
Repository = "https://github.com/9-Trinkets/projectbrain-cli"
Homepage = "https://projectbrain.tools"

[project.optional-dependencies]
publish = ["twine>=5.0"]

[project.scripts]
pb = "pb.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pb"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
